Add --illegal-access switch + formatting